# restaurant_booking

./: .dockerignore  .env_temp  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
core/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
core/fixtures/: awards.json  menu_categories.json  menu_items.json  restaurant.json  restaurant_data.json  reviews.json  site_content.json  tables.json  team_members.json
core/migrations/: 0001_initial.py  0002_initial.py
reservations/: filters.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
reservations/api/: urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_initial.py
restaurant_booking/: celery.py  settings.py  urls.py
static/css/: about.css  menu.css  profile.css  reservation.css  style.css
static/js/: about.js  main.js  profile.js  reservation.js
templates/: base.html
templates/core/: about.html  add_review.html  delete_review.html  home.html  menu.html  reviews.html
templates/reservations/: reservation_cancel.html  reservation_create.html  reservation_detail.html  reservation_list.html  reservation_management.html  reservation_success.html
templates/users/: login.html  logout_confirm.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  (+1 more)
users/: admin.py  forms.py  models.py  urls.py  views.py
(+3 files in other folders)
