[project]
name = "restaurant-booking"
version = "0.1.0"
description = ""
authors = [
    {name = "podtopkinalexei",email = "podtopkinalexei@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
